Added basic input box and headers

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>This is the title!</title>
+<title>Ingenium Telemetry Server</title>
 </head>
 <body>
+    <h1>Data Input</h1>
+    <form>
+        <input type="text" id="data_box" name="data_box2"><br>
+    </form>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+    <h1>Data Return</h1>
 </body>
 </html> 
