--- a/index.html
+++ b/index.html
@@ -5,10 +5,148 @@
 </head>
 <body>
     <h1>Data Input</h1>
-    <form>
+    <form action="" method="POST" id="data_submit">
         <input type="text" id="data_box" name="data_box2"><br>
+        <button type="submit" sendMessage()>Submit</button>
     </form>
+
+
+<script type="module">
+  document.getElementById('data_submit').addEventListener('submit', myFunction);
+  function myFunction(e) {
+      alert("If this were a functional app, your data would now be submitted!");
+    }
+
+  </script>
+
 
     <h1>Data Return</h1>
 </body>
 </html> 
+
+
+
+
+
+
+
+<!-- code sample adapted from https://how.dev/answers/how-to-connect-an-html-registration-form-to-firebase
+<head>
+</head>
+
+<body>
+  <form action="" method="POST" id="registrationform">
+   
+    <fieldset>
+      <input type="password" name="password" value="" id="password" required />
+      <button type="submit" sendMessage()>Register</button>
+    </fieldset>
+      
+  </form>
+
+  <script type="module">
+      //listen for submit event//(1)
+  document.getElementById('registrationform')
+    .addEventListener('submit', formSubmit);
+
+    //Submit form(1.2)
+    function formSubmit(e) {
+      e.preventDefault();
+      // Get Values from the DOM
+      let name = document.querySelector('#name').value;
+      let email = document.querySelector('#email').value;
+      let password = document.querySelector('#password').value;
+      let bio = document.querySelector('#bio').value;
+      let job = document.querySelector('#job').value;
+      let interest = document.querySelector('#interest').value;
+    }
+  </script>
+</body>
+
+</html> -->
+
+
+
+
+
+
+
+
+<!-- code sample from https://how.dev/answers/how-to-connect-an-html-registration-form-to-firebase
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Registration Form</title>
+</head>
+
+<body>
+  <form action="" method="POST" id="registrationform">
+    <h1>Register</h1>
+    <div class="alert">Form Submitted Successfully</div>
+
+
+    <fieldset>
+      <legend><span class="section">1</span>Your Basic Info</legend>
+      <label class="" for="name">Name:</label>
+      <input type="text" name="name" value="" id="name" required />
+
+      <label class="" for="email">Email:</label>
+      <input type="email" name="email" value="" id="email" required />
+
+      <label for="password">password:</label>
+      <input type="password" name="password" value="" id="password" required />
+    </fieldset>
+
+
+    <fieldset>
+      <legend><span class="section">2</span>Profile</legend>
+      <label class="" for="bio">Bio:</label>
+      <textarea name="bio" id="bio" required></textarea>
+
+      <label for="job">Job Role:</label>
+      <select name="job" id="job" required>
+        <optgroup label="Web">
+          <option value="front_end_developer">Frontend Developer</option>
+          <option value="back_end_developer">Backend Developer</option>
+          <option value="fullstack_developer">Fullstack Developer</option>
+        </optgroup>
+        <optgroup label="Mobile">
+          <option value="android">Android</option>
+          <option value="ionic">Ionic</option>
+          <option value="phonegap">PhoneGap</option>
+        </optgroup>
+      </select>
+      <br /><br />
+      <label>Interest:</label>
+
+      <select id="interest" required>
+        <option value="development">Development</option>
+        <option value="design">Design</option>
+        <option value="business">Business</option>
+      </select>
+
+      <button type="submit" sendMessage()>Register</button>
+  </form>
+
+  <script type="module">
+      //listen for submit event//(1)
+  document.getElementById('registrationform')
+    .addEventListener('submit', formSubmit);
+
+    //Submit form(1.2)
+    function formSubmit(e) {
+      e.preventDefault();
+      // Get Values from the DOM
+      let name = document.querySelector('#name').value;
+      let email = document.querySelector('#email').value;
+      let password = document.querySelector('#password').value;
+      let bio = document.querySelector('#bio').value;
+      let job = document.querySelector('#job').value;
+      let interest = document.querySelector('#interest').value;
+    }
+  </script>
+</body>
+
+</html> -->
